Add report Fix axios error handling Fix gcp setting in local
